--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -56,20 +56,21 @@
                                 <input type="text" class="form-control" placeholder="Search...">
                                 <span class="input-group-btn">
                                     <button class="btn btn-default" type="button">
-                                        <i class="fa fa-search"></i>
+                                        <i class="glyphicon glyphicon-search"></i>
                                     </button>
                                 </span>
                             </div>
                         </li>
-                        <li><a href="index.html"><i class="fa fa-home fa-fw"></i> 主页</a></li>
-                        <li><a href="GFT_Database.html"><i class="fa fa-book fa-fw"></i> 资料库</a></li>
-                        <li><a href="GFT_LogiRank.html" class="active"><i class="fa fa-briefcase fa-fw"></i> 后勤排序器</a></li>
-                        <li><a href="GFT_LevelCal.html"><i class="fa fa-upload fa-fw"></i> 练级计算器</a></li>
-                        <li><a href="GFT_IOPSimulate.html"><i class="fa fa-gears fa-fw"></i> 建造模拟器</a></li>
-                        <li><a href="GFT_ChipCal.html"><i class="fa fa-delicious fa-fw"></i> 芯片计算器</a></li>
+                        <li><a href="index.html">主页</a></li>
+                        <li><a href="GFT_Database.html">资料库</a></li>
+                        <li><a href="GFT_LogiRank.html">后勤排序器</a></li>
+                        <li><a href="GF_logistics.html" class="active">后勤组合排序器</a></li>
+                        <li><a href="GFT_LevelCal.html">练级计算器</a></li>
+                        <li><a href="GFT_IOPSimulate.html">建造模拟器</a></li>
+                        <li><a href="GFT_ChipCal.html">芯片计算器</a></li>
                         <li><a href="GFT_Echelon.html"><i class="glyphicon glyphicon-screenshot"></i> &nbsp;阵形模拟器</a></li>
                         <li><a href="GFT_Stat.html"><i class="glyphicon glyphicon-stats"></i> &nbsp;掉落统计</a></li>
-                        <li><a href="GFT_Class.html"><i class="fa fa-search"></i> &nbsp;格里芬人事部</a></li>
+                        <li><a href="GFT_Class.html">格里芬人事部</a></li>
                     </ul>
                 </div>
             </div>
@@ -289,7 +290,7 @@
                                     </div>
                                 </div>
                                 <div id="Saved" class="panel-collapse collapse" aria-expanded="false">
-                                    <div class="table-responsive" style="max-height: 330px; overflow-y: auto; margin-bottom: 0;">
+                                    <div class="table-responsive" style="max-height: 400px; overflow-y: auto; margin-bottom: 0;">
                                         <table class="table table-responsive text-nowrap table-condensed" style="margin-bottom: 0; text-align: center; cursor: default;">
                                             <tbody id="Saved_Body">
                                                 <tr id="importSaved">
@@ -320,7 +321,7 @@
                                 </div>
                                 <div id="MissionTable_panel" class="panel-collapse collapse in" aria-expanded="true">
                                     <div class="panel-body" style="padding: 0;">
-                                        <div class="table-responsive" style="max-height: 400px; overflow-y: auto; margin-bottom: 0; border: 0;">
+                                        <div class="table-responsive" style="max-height: 500px; overflow-y: auto; margin-bottom: 0; border: 0;">
                                             <table class="table table-responsive text-nowrap table-condensed" style="border: 0;text-align: center; margin-bottom: 0;">
                                                 <thead>
                                                     <tr>
@@ -343,55 +344,67 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="panel panel-default" style="max-width: 582px;">
-                            <div class="panel-heading" id="PlanDetailsTitle" style="cursor: default;"></div>
-                            <div class="panel-body" style="padding: 0;">
-                                <div class="table-responsive" style="margin-bottom: 0; border: 0;">
-                                    <table class="table table-responsive text-nowrap table-condensed" style="border: 0;margin-bottom: 0; width: 580px; font-size: 13px; text-align: center; cursor: default;" id="PlanDetails">
-                                        <tbody>
-                                            <tr>
-                                                <td style="width: 30%;" colspan=3 id="PlanDetails_ShownTab"></td>
-                                                <td style="width: 30%;" colspan=3 id="PlanDetails_TotalTime"></td>
-                                                <td style="width: 30%;" colspan=3 id="PlanDetails_GreatSuccessRate"></td>
-                                                <td style="width: 10%;"></td>
-                                            </tr>
-                                            <tr>
-                                                <td id="PlanDetails_Mission"></td>
-                                                <td id="PlanDetails_Manp"></td>
-                                                <td id="PlanDetails_Ammu"></td>
-                                                <td id="PlanDetails_Rati"></td>
-                                                <td id="PlanDetails_Part"></td>
-                                                <td id="PlanDetails_TPro"></td>
-                                                <td id="PlanDetails_Equi"></td>
-                                                <td id="PlanDetails_QPro"></td>
-                                                <td id="PlanDetails_QRes"></td>
-                                                <td id="PlanDetails_Time"></td>
-                                            </tr>
-                                            <tr id="PlanDetails_Mission_1"></tr>
-                                            <tr id="PlanDetails_Mission_2"></tr>
-                                            <tr id="PlanDetails_Mission_3"></tr>
-                                            <tr id="PlanDetails_Mission_4"></tr>
-                                            <tr id="PlanDetails_PerHour"></tr>
-                                            <tr id="PlanDetails_Total"></tr>
-                                            <tr id="PlanDetails_Chart_row">
-                                                <td colspan=10 id="PlanDetails_Chart" style="width: 580px;height:120px;"></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="input-group-btn">
-                                    <button class="btn btn-default" type="button" id="savePlan" style="width:100px;padding-top:3px;padding-bottom:3px;font-size:13px;"></button>
-                                    <button class="btn btn-default" type="button" id="Capture" style="width:100px;padding-top:3px;padding-bottom:3px;font-size:13px;"></button>
+                        
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12" style="float: right;">
+                                <div class="panel panel-default" style="max-width: 582px;">
+                    
+                                    <div class="panel-heading" id="PlanDetailsTitle" style="cursor: default;"></div>
+                                    <div class="panel-body" style="padding: 0;">
+                                        <div class="table-responsive" style="margin-bottom: 0; border: 0;">
+                                            <table class="table table-responsive text-nowrap table-condensed"
+                                                style="border: 0;margin-bottom: 0; width: 580px; font-size: 13px; text-align: center; cursor: default;"
+                                                id="PlanDetails">
+                                                <tbody>
+                                                    <tr>
+                                                        <td style="width: 30%;" colspan=3 id="PlanDetails_ShownTab"></td>
+                                                        <td style="width: 30%;" colspan=3 id="PlanDetails_TotalTime"></td>
+                                                        <td style="width: 30%;" colspan=3 id="PlanDetails_GreatSuccessRate"></td>
+                                                        <td style="width: 10%;"></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td id="PlanDetails_Mission"></td>
+                                                        <td id="PlanDetails_Manp"></td>
+                                                        <td id="PlanDetails_Ammu"></td>
+                                                        <td id="PlanDetails_Rati"></td>
+                                                        <td id="PlanDetails_Part"></td>
+                                                        <td id="PlanDetails_TPro"></td>
+                                                        <td id="PlanDetails_Equi"></td>
+                                                        <td id="PlanDetails_QPro"></td>
+                                                        <td id="PlanDetails_QRes"></td>
+                                                        <td id="PlanDetails_Time"></td>
+                                                    </tr>
+                                                    <tr id="PlanDetails_Mission_1"></tr>
+                                                    <tr id="PlanDetails_Mission_2"></tr>
+                                                    <tr id="PlanDetails_Mission_3"></tr>
+                                                    <tr id="PlanDetails_Mission_4"></tr>
+                                                    <tr id="PlanDetails_PerHour"></tr>
+                                                    <tr id="PlanDetails_Total"></tr>
+                                                    <tr id="PlanDetails_Chart_row">
+                                                        <td colspan=10 id="PlanDetails_Chart" style="width: 580px;height:120px;"></td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                        <div class="input-group-btn">
+                                            <button class="btn btn-default" type="button" id="savePlan"
+                                                style="width:100px;padding-top:3px;padding-bottom:3px;font-size:13px;"></button>
+                                            <button class="btn btn-default" type="button" id="Capture"
+                                                style="width:100px;padding-top:3px;padding-bottom:3px;font-size:13px;"></button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-7">
-                        <div class="panel panel-default">
-                            <div class="panel-heading" id="result"></div>
-                            <div class="panel-body">
-                                <div id="start_sorting_html"></div>
-                                <div id="Plan_Table"></div>
+                            <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12" style="float: left;">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" id="result"></div>
+                                    <div class="panel-body">
+                                        <div id="start_sorting_html"></div>
+                                        <div id="Plan_Table"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
