--- a/release/GF_logistics.html
+++ b/release/GF_logistics.html
@@ -9,31 +9,10 @@
     <meta name="author" content="ChantXu">
     <meta name="keywords" content="少女前线, 后勤, 计算, Girls' Frontline, Logistics Support, Calculator">
     <title>少女前线-后勤组合排序器</title>
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../vendor/startbootstrap/css/sb-admin-2.min.css" rel="stylesheet">
-    <link href="../css/GF_logistics.css" rel="stylesheet">
-    <script src="../vendor/jquery-v2.1.1/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../vendor/echarts/echarts.min.js"></script>
-    <script src="../vendor/html2canvas/html2canvas.min.js"></script>
-    <script src="../vendor/js-sha1/sha1.min.js"></script>
-    <script src="../vendor/js-md5/md5.min.js"></script>
-    <script src="../js/GF_logistics_function.js"></script>
-    <script src="../js/GF_logistics_input.js"></script>
-    <script src="../js/Quick_Sort.js"></script>
-    <script src="../lang/languages.js"></script>
-    <script src="../js/GF_logistics_localStorage.js"></script>
-    <script src="../js/GF_logistics_loadHTML.js"></script>
-    <script src="../js/GF_logistics_html.js"></script>
-    <script src="../js/GF_logistics_htmlEvent.js"></script>
-    <script src="../js/GF_logistics_data.js"></script>
-    <script src="../js/GF_logistics_Tab.js"></script>
-    <script src="../js/GF_logistics_Plan.js"></script>
-    <script src="../js/GF_logistics_main.js"></script>
-    <script src="../js/GF_logistics_FineTuning.js"></script>
-    <script src="../js/GF_logistics_MissionTable.js"></script>
-    <script src="../js/GF_logistics_PlanDetails.js"></script>
-    <script src="../js/GF_logistics_Saved.js"></script>
+    <link href="./dependent/css/GF_logistics_dependent.css" rel="stylesheet">
+    <link href="./css/GF_logistics.min.css" rel="stylesheet">
+    <script src="./dependent/js/GF_logistics_dependent.min.js"></script>
+    <script src="./js/GF_logistics.min.js"></script>
 </head>
 
 <body>
