--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -453,7 +453,7 @@
                                                             <div class="form-group input-group" style="margin-bottom: 0;">
                                                                 <label for="PlanDetails_InputStartTime" id="PlanDetails_InputStartTime_label"
                                                                     class="input-group-addon"></label>
-                                                                <input type="time" step="60" id="PlanDetails_InputStartTime" class="form-control" value="00:00"
+                                                                <input name=hh%3Amm type="time" step="60" id="PlanDetails_InputStartTime" class="form-control" value="00:00"
                                                                     onclick="this.select()" style="height: 28px;padding:3px 6px 3px 6px;" autocomplete="off">
                                                             </div>
                                                         </td>
