--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -294,7 +294,7 @@
                                 <div class="col-lg-12">
                                     <button type="button" class="btn btn-primary" style="outline:none;"
                                         id="start_sorting"></button>
-                                    <button type="button" class="btn btn-danger" style="outline: none;"
+                                    <button type="button" class="btn btn-danger" style="outline: none; display: none;"
                                         id="clear_sorting" disabled="disabled"></button>
                                 </div>
                             </div>
@@ -396,7 +396,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="col-lg-12">
                         <div class="row">
@@ -418,16 +417,16 @@
                                                         <td style="width: 116px;" colspan=2 id="PlanDetails_ExecutionTimes"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td id="PlanDetails_Mission"></td>
-                                                        <td id="PlanDetails_Manp"></td>
-                                                        <td id="PlanDetails_Ammu"></td>
-                                                        <td id="PlanDetails_Rati"></td>
-                                                        <td id="PlanDetails_Part"></td>
-                                                        <td id="PlanDetails_TPro"></td>
-                                                        <td id="PlanDetails_Equi"></td>
-                                                        <td id="PlanDetails_QPro"></td>
-                                                        <td id="PlanDetails_QRes"></td>
-                                                        <td id="PlanDetails_Time"></td>
+                                                        <td id="PlanDetails_Mission" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_Manp" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_Ammu" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_Rati" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_Part" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_TPro" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_Equi" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_QPro" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_QRes" style="width: 10%;"></td>
+                                                        <td id="PlanDetails_Time" style="width: 10%;"></td>
                                                     </tr>
                                                     <tr id="PlanDetails_Mission_1"></tr>
                                                     <tr id="PlanDetails_Mission_2"></tr>
